# OpenClPlayground

./: .gitignore  CMakeLists.txt
assets/: Actor.cl  Actor.h  Board.cl  Cell.h  Common.cl  Random.cl  board.cl  board.vert  fractal.cl  fractal.frag  partsim.vert  random.cl
common/: Board.cpp  OpenCLUtil.cpp  OpenGLUtil.cpp
examples/: julia.cpp  partsim.cpp
src/: Board.h  Exception.cpp  Exception.h  OpenCLUtil.cpp  OpenCLUtil.h  OpenClTypes.h  OpenGLUtil.cpp  OpenGLUtil.h  main.cpp
